update documentacion API
